--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,6 +25,9 @@
 @import 'general/base';
 @import 'general/typography';
 
+// Libraries
+@import 'libraries/hamburgers/hamburgers';
+
 // Components
 @import 'components/buttons';
 @import 'components/contact';
