--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -3,13 +3,17 @@
   <ul>
     {{ $currentPage := . }}
     {{ range .Site.Menus.main }}
-    <li class="menu-item-{{ .Name | lower }}{{ if $currentPage.IsMenuCurrent "main" . }} active{{ end }}">
-      <a href="{{.URL}}">
+    <li class="menu-item-{{ .Name | lower }} {{ if $currentPage.IsMenuCurrent "main" . }} active {{ end }}">
+      <a href="{{ .URL }}">
         {{ .Pre }}
         <span>{{ .Name }}</span>
       </a>
     </li>
     {{ end }}
+
+    <li class="menu-item-quickstart">
+      <a class="button button-secondary" href="/docs/quickstart/">Quick Start</a>
+    </li>
   </ul>
 </div>
 {{ end }}
