--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -90,10 +90,8 @@ $bp-lg: 992px;
 $bp-xl: 1200px;
 
 // Embellishments
-$headerHeight: 3.7rem;
+$headerHeight: 95px;
 $footerHeight: 0;
-
-
 
 $sidebarLinkWeight: 400;
 $sidebarCurrentPageWeight: 600;
