--- a/assets/scss/components/_main-menu-mobile.scss
+++ b/assets/scss/components/_main-menu-mobile.scss
@@ -62,7 +62,7 @@ $button-width: 35px;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -71,8 +71,9 @@ $button-width: 35px;
 
   &.open {
     animation: fadeIn 0.3s ease forwards;
+    height: 100%;
     background: $color-main;
-    z-index: 10;
+    z-index: 100;
   
     li {
       animation: fadeInRight 0.5s ease forwards;
@@ -141,7 +142,7 @@ $button-width: 35px;
   }
 
   100% {
-    opacity: 0.9;
+    opacity: 1;
     visibility: visible;
   }
 }
