--- a/layouts/why-keptn/why-keptn.html
+++ b/layouts/why-keptn/why-keptn.html
@@ -30,7 +30,7 @@ page-why-keptn
 <div class="intro">
   <div class="container pt-5 pb-3 pb-md-5">
     <div class="row pt-md-5">
-      <div class="col-12 col-md-6 pt-md-4 pb-2">
+      <div class="col-12 col-md-6 pb-2">
         <h1>Why <span class="colored">keptn?</span></h1>
 
         {{ with .Site.GetPage "section" "why-keptn/intro-top" }}
