--- a/layouts/index.html
+++ b/layouts/index.html
@@ -173,8 +173,8 @@ page-home
 
 {{/* Integration Workflow */}}
 <div class="integration-workflow">
-  <div class="container pt-5 pb-5 pb-md-4">
-    <div class="row pt-lg-2 pb-md-3">
+  <div class="container pt-5 pb-4">
+    <div class="row pt-lg-2 pb-2">
       <div class="col-12">
         <div class="col-12 col-md-8 col-lg-5 p-0">
           {{ with .Site.GetPage "section" "home/integration-workflow-top" }}
