--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,7 +36,7 @@ page-home
         {{ end }}
 
         <div class="d-flex pt-2">
-          <a class="button button-tertiary" href="https://github.com/keptn/keptn.github.io">
+          <a class="button button-tertiary" href="https://github.com/keptn/keptn">
             keptn on Github
             <img class="icon" src="/images/general/icon-github.svg" alt="Github">
           </a>
