--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,5 +1,5 @@
 <div class="contact section-primary-opacity">
-  <a href="#top">
+  <a onclick="window.scrollTo({ top: 0 });" href="javascript: void(0)">
     <img class="back-to-top" src="/images/general/icon-back-to-top.svg" alt="Back to top">
   </a>
 
