Add custom 404 page

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -45,6 +45,7 @@
 @import 'components/toc';
 
 // Pages
+@import 'pages/404';
 @import 'pages/doc';
 @import 'pages/home';
 @import 'pages/why-keptn';
