--- a/assets/scss/pages/_why-keptn.scss
+++ b/assets/scss/pages/_why-keptn.scss
@@ -49,7 +49,11 @@
   .tool-integrations,
   .observability {
     p:last-of-type {
-      font-size: 1.125rem;
+      font-size: 1rem;
+
+      @media screen and (min-width: $bp-md) {
+        font-size: 1.125rem;
+      }
     }
   }
 
