--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "title" }}
-keptn | A message-driven control plane for application delivery and automated operations
+keptn | An event-based control plane for continuous delivery and automated operations for cloud-native applications
 {{ end }}
 
 {{ define "header_css" }}
