--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,6 +31,7 @@
 // Components
 @import 'components/buttons';
 @import 'components/contact';
+@import 'components/copy-indicator';
 @import 'components/footer';
 @import 'components/hamburger';
 @import 'components/header';
@@ -43,6 +44,7 @@
 @import 'components/sidebar';
 @import 'components/teaser';
 @import 'components/toc';
+@import 'components/toolbar';
 
 // Pages
 @import 'pages/404';
