--- a/assets/scss/components/_copy-indicator.scss
+++ b/assets/scss/components/_copy-indicator.scss
@@ -3,8 +3,10 @@
   position: fixed;
   bottom: 90px;
   left: 50%;
+  width: 100%;
+  max-width: 310px;
   transform: translateX(-50%);
-  padding: 10px 24px;
+  padding: 10px 18px;
   opacity: 0;
   border-radius: 24px;
   line-height: 32px;
