Add hover states for buttons and icons

--- a/assets/scss/components/_toolbar.scss
+++ b/assets/scss/components/_toolbar.scss
@@ -45,6 +45,10 @@ body.page-why-keptn {
       &:focus {
         outline: 0;
       }
+
+      &:hover {
+        background-image: url('/images/general/icon-copy-to-clipboard-hover.svg');
+      }
     }
 
     &:hover {
