--- a/assets/scss/pages/_why-keptn.scss
+++ b/assets/scss/pages/_why-keptn.scss
@@ -38,9 +38,28 @@
       width: 80px;
       margin-top: 24px;
       margin-bottom: 24px;
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 0;
       border-bottom: 4px solid #006bb8;
+    }
+
+    p:last-of-type {
+      margin-bottom: 0;
+    }
+
+    .text {
+      order: 1;
+
+      @media screen and (min-width: $bp-md) {
+        order: initial;
+      }
+    }
+
+    .image {
+      order: 2;
+
+      @media screen and (min-width: $bp-md) {
+        order: initial;
+      }
     }
   }
 
@@ -53,16 +72,6 @@
 
       @media screen and (min-width: $bp-md) {
         font-size: 1.125rem;
-      }
-    }
-  }
-
-  // Tool Integrations & Observability
-  .tool-integrations,
-  .observability {
-    h2:after {
-      @media screen and (min-width: $bp-md) {
-        margin-left: 0;
       }
     }
   }
