--- a/layouts/why-keptn/why-keptn.html
+++ b/layouts/why-keptn/why-keptn.html
@@ -67,7 +67,7 @@ page-why-keptn
         {{ end }}
       </div>
 
-      <div class="image col-12 col-md-5 offset-md-1 d-flex flex-column justify-content-center">
+      <div class="image col-12 col-md-5 offset-md-1 d-flex flex-column justify-content-center align-items-center">
         {{ with .Site.GetPage "section" "why-keptn/maintenance-right" }}
           {{ .Content }}
         {{ end }}
@@ -80,7 +80,7 @@ page-why-keptn
 <div class="higher-compliance section-primary-opacity">
   <div class="container pt-5 pb-5">
     <div class="row pt-4 pb-4">
-      <div class="image col-12 col-md-5 d-flex flex-column justify-content-center">
+      <div class="image col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
         {{ with .Site.GetPage "section" "why-keptn/higher-compliance-left" }}
           {{ .Content }}
         {{ end }}
@@ -105,7 +105,7 @@ page-why-keptn
         {{ end }}
       </div>
 
-      <div class="image col-12 col-md-5 offset-md-1 d-flex flex-column justify-content-center">
+      <div class="image col-12 col-md-5 offset-md-1 d-flex flex-column justify-content-center align-items-center">
         {{ with .Site.GetPage "section" "why-keptn/easy-extensibility-right" }}
           {{ .Content }}
         {{ end }}
@@ -118,7 +118,7 @@ page-why-keptn
 <div class="tool-integrations section-primary-opacity">
   <div class="container pt-5 pb-5">
     <div class="row pt-4 pb-4">
-      <div class="image col-12 col-md-5 d-flex flex-column justify-content-center">
+      <div class="image col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
         {{ with .Site.GetPage "section" "why-keptn/tool-integrations-left" }}
           {{ .Content }}
         {{ end }}
@@ -143,7 +143,7 @@ page-why-keptn
         {{ end }}
       </div>
 
-      <div class="image col-12 col-md-5 offset-md-1 d-flex flex-column justify-content-center">
+      <div class="image col-12 col-md-5 offset-md-1 d-flex flex-column justify-content-center align-items-center">
         {{ with .Site.GetPage "section" "why-keptn/observability-right" }}
           {{ .Content }}
         {{ end }}
