--- a/assets/scss/pages/_why-keptn.scss
+++ b/assets/scss/pages/_why-keptn.scss
@@ -57,8 +57,16 @@
     .image {
       order: 2;
 
+      img {
+        max-width: 400px;
+      }
+
       @media screen and (min-width: $bp-md) {
         order: initial;
+
+        img {
+          max-width: 100%;
+        }
       }
     }
   }
