change to bitly link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,7 +36,7 @@ page-home
           {{ .Content }}
         {{ end }}
         <br>
-        <a class="button button-secondary" href="https://cloud.google.com/partners/partnercredit/?pcn_code=0014M00001h35IHQAQ" target="_blank">Sign up and use Keptn in GKE</a>
+        <a class="button button-secondary" href="http://bit.ly/keptnongke" target="_blank">Sign up and use Keptn in GKE</a>
         
       </div>
     </div>
