--- a/assets/scss/pages/_doc.scss
+++ b/assets/scss/pages/_doc.scss
@@ -586,6 +586,14 @@ blockquote {
   font-size: 125%;
 }
 
+.unsupported {
+  margin-top: 0.15rem;
+  margin-bottom: 0;
+  padding: 0 0 0 0;
+  color: red;
+  font-size: 90%;
+}
+
 .byline {
   margin-top: 0.15rem;
   margin-bottom: 2rem;
