smaller promo + landing page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,6 +41,10 @@ page-home
             <img class="icon" src="/images/general/icon-github.svg" alt="Github">
             <img class="icon icon--hover" src="/images/general/icon-github-hover.svg" alt="Github">
           </a>
+          &nbsp;&nbsp;&nbsp;
+          <a class="button button-primary" href="./docs/quickstart/">
+            Quickstart with credits on GKE
+          </a>
         </div>
       </div>
     </div>
