add link to tutorial via html instead of markdown

--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -10,8 +10,15 @@
       </a>
     </li>
     {{ end }}
-  </ul>
 
+
+    <li class="menu-item-tutorials">
+      <a href="/docs/0.6.0/usecases/">
+        <span>Tutorials</span>
+      </a>
+    </li>
+
+  </ul>
   <a class="button button-primary" href="/docs/quickstart/">Quick Start</a>
 </div>
 {{ end }}
