--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -11,6 +11,12 @@
     </li>
     {{ end }}
 
+    <li class="menu-item-tutorials">
+      <a href="/docs/0.6.0/usecases/">
+        <span>Tutorials</span>
+      </a>
+    </li>
+
     <li class="menu-item-quickstart">
       <a class="button button-secondary" href="/docs/quickstart/">Quick Start</a>
     </li>
