--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -17,6 +17,12 @@
       </a>
     </li>
 
+    <li class="menu-item-community">
+      <a href="https://github.com/keptn/community" target="_blank">
+        <span>Community</span>
+      </a>
+    </li>
+
     <li class="menu-item-quickstart">
       <a class="button button-secondary" href="/docs/quickstart/">Quick Start</a>
     </li>
