--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -18,6 +18,12 @@
       </a>
     </li>
 
+    <li class="menu-item-community">
+      <a href="https://github.com/keptn/community" target="_blank">
+        <span>Community</span>
+      </a>
+    </li>
+    
   </ul>
   <a class="button button-primary" href="/docs/quickstart/">Quick Start</a>
 </div>
