add tutorials and community links in menu
* add tutorials in menu

* add community links

--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -11,6 +11,18 @@
     </li>
     {{ end }}
 
+    <li class="menu-item-tutorials">
+      <a href="/docs/0.6.0/usecases/">
+        <span>Tutorials</span>
+      </a>
+    </li>
+
+    <li class="menu-item-community">
+      <a href="https://github.com/keptn/community" target="_blank">
+        <span>Community</span>
+      </a>
+    </li>
+
     <li class="menu-item-quickstart">
       <a class="button button-secondary" href="/docs/quickstart/">Quick Start</a>
     </li>
