--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -10,8 +10,21 @@
       </a>
     </li>
     {{ end }}
-  </ul>
 
+
+    <li class="menu-item-tutorials">
+      <a href="/docs/0.6.0/usecases/">
+        <span>Tutorials</span>
+      </a>
+    </li>
+
+    <li class="menu-item-community">
+      <a href="https://github.com/keptn/community" target="_blank">
+        <span>Community</span>
+      </a>
+    </li>
+    
+  </ul>
   <a class="button button-primary" href="/docs/quickstart/">Quick Start</a>
 </div>
 {{ end }}
