--- a/assets/scss/pages/_doc.scss
+++ b/assets/scss/pages/_doc.scss
@@ -589,11 +589,15 @@ blockquote {
 }
 
 .unsupported {
-  margin-top: 0.15rem;
-  margin-bottom: 0;
-  padding: 0 0 0 0;
-  color: red;
-  font-size: 90%;
+  background-color: #FFBABA;
+  color: #6A0E0E;
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  padding: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .byline {
