link to new tutorial portal

--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -13,7 +13,7 @@
 
 
     <li class="menu-item-tutorials">
-      <a href="/docs/0.6.0/usecases/">
+      <a href="https://tutorials.keptn.sh">
         <span>Tutorials</span>
       </a>
     </li>
