--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -12,7 +12,7 @@
     {{ end }}
 
     <li class="menu-item-tutorials">
-      <a href="/docs/0.6.0/usecases/">
+      <a href="https://tutorials.keptn.sh">
         <span>Tutorials</span>
       </a>
     </li>
