refer to new tutorials

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,7 +44,7 @@ page-home
             <img class="icon icon--hover" src="/images/general/icon-github-hover.svg" alt="Github">
           </a>
           &nbsp;&nbsp;&nbsp;
-          <a class="button button-primary" href="./docs/quickstart/setup_platform/setup_gke/">
+          <a class="button button-primary" href="https://tutorials.keptn.sh/tutorials/keptn-installation-gke/index.html#0">
             Quickstart with credits on GKE
           </a>
         </div>
