#505 Set different color for develop branch

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,10 +17,11 @@
   </div>
 </div>
 
-<!-- check if the current page or any of the parent pages has "unsupported" set -->
+<!-- check if the current page or any of the parent pages has "unsupported" or "develop" set -->
 {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
 
 {{ $unsupported := "" }}
+{{ $develop := "" }}
 {{ $page := .Page }}
 {{ range $index, $element := split $url "/" }}
   {{ if $page }}
@@ -28,10 +29,18 @@
       <!-- unsupported found -->
       {{ $unsupported = $page.Params.unsupported }}
     {{ end }}
+    {{ if $page.Params.develop }}
+      <!-- develop found -->
+      {{ $develop = $page.Params.develop }}
+    {{ end }}
     {{ $page = $page.Parent }}
   {{ end }}
 {{ end }}
 
 {{ if $unsupported }}
   <div class="unsupported">{{ $unsupported }}</div>
+{{ end }}
+
+{{ if $develop }}
+  <div class="develop">{{ $develop }}</div>
 {{ end }}
