--- a/assets/scss/pages/_doc.scss
+++ b/assets/scss/pages/_doc.scss
@@ -600,6 +600,18 @@ blockquote {
   text-align: center;
 }
 
+.develop {
+  background-color: #fbbd05;
+  color: #6A0E0E;
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  padding: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+}
+
 .byline {
   margin-top: 0.15rem;
   margin-bottom: 2rem;
