--- a/assets/scss/pages/_doc.scss
+++ b/assets/scss/pages/_doc.scss
@@ -601,8 +601,8 @@ blockquote {
 }
 
 .develop {
-  background-color: #fbbd05;
-  color: #6A0E0E;
+  background-color: #FBBD05;
+  color: #D96900
   position: fixed;
   width: 100%;
   height: 30px;
