--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,9 +38,9 @@
 {{ end }}
 
 {{ if $unsupported }}
-  <div class="unsupported">{{ $unsupported }}</div>
+  <div class="note unsupported">{{ $unsupported }}</div>
 {{ end }}
 
 {{ if $develop }}
-  <div class="develop">{{ $develop }}</div>
+  <div class="note develop">{{ $develop }}</div>
 {{ end }}
