--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -49,6 +49,14 @@
           </div>
         </div>
       </div>
+
+      <div class="col-12 text-center">
+        <p>&nbsp;</p>
+        
+        <img src="/images/home/cloud-native-computing.svg" alt="CNCF" style="max-width:50%"><br>
+        <p>We are <a href="https://cncf.io">Cloud Native Computing Foundation</a> Sandbox project.</p>
+        
+      </div>
     </div>
   </div>
 </div>
