--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -54,7 +54,7 @@
         <p>&nbsp;</p>
         
         <img src="/images/home/cloud-native-computing.svg" alt="CNCF" style="max-width:50%"><br>
-        <p>We are <a href="https://cncf.io">Cloud Native Computing Foundation</a> Sandbox project.</p>
+        <p>We are a <a href="https://cncf.io">Cloud Native Computing Foundation</a> Sandbox project.</p>
         
       </div>
     </div>
