fix quickstart link

--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -24,7 +24,7 @@
     </li>
 
     <li class="menu-item-quickstart">
-      <a class="button button-secondary" href="/docs/quickstart/">Quick Start</a>
+      <a class="button button-secondary" href="/docs/0.7.x/quickstart/">Quick Start</a>
     </li>
   </ul>
 </div>
