--- a/layouts/partials/teaser.html
+++ b/layouts/partials/teaser.html
@@ -7,7 +7,7 @@
         {{ end }}
 
         <div class="d-flex justify-content-center pt-4">
-          <a class="button button-secondary" href="/docs/quickstart/">Quick Start</a>
+          <a class="button button-secondary" href="/docs/0.7.x/quickstart/">Quick Start</a>
         </div>
       </div>
     </div>
