add banner on top of landing page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,8 +28,11 @@ page-home
 {{ define "main" }}
 
 
+
 {{/* Intro */}}
 <div class="intro">
+  {{/* announcement */}}
+{{ partial "announcement.html" . }}
   <div class="container pt-5 pb-5">
     <div class="row pt-md-5 pb-md-5">
       <div class="col-12 col-md-8 col-lg-6">
