--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -27,6 +27,11 @@
       font-family: $font-family-intro;
     }
 
+    h3, h3 a {
+      color: #fff;
+      font-size: 1rem;
+    }
+
     p:first-of-type {
       margin-bottom: 32px;
     }
