--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@ page-home
 
 {{ define "meta" }}
 <meta property="og:description" content="Building the fabric for cloud-native lifecycle automation at enterprise scale">
-<meta property="og:title" content="Keptn - A message-driven control plane for application delivery and automated operations">
+<meta property="og:title" content="Keptn - an event-based control plane for continuous delivery and automated operations for cloud-native applications.">
 <meta property="og:image" content="https://keptn.sh/favicon.png">
 <meta property="og:url" content="https://keptn.sh/index.html">
 <meta name="twitter:card" content="summary_large_image">
