--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -111,6 +111,7 @@ $textColor: #000000;
 $linkWeight: 400;
 $linkDisabledColor: #eeeeee;
 $textBrandColor: #006BB8;
+$background-news: rgba(0, 107, 184, 0.2);
 $secondBrandColor: #002C66;
 $tableHeaderWeight: 600;
 $boxBorderColor: #eeeeee;
