--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,53 @@
-<div class="footer fixed-bottom">
+<div class="footer">
   <div class="container">
-    <span class="title">Built with &nbsp;<img src="/images/general/icon-heart.svg" alt="Heart">&nbsp; <a class="no-underline" href="https://dynatrace.com" target="_blank">by Dynatrace</a></span>
+    <div class="row">
+      <div class="col-md-6 text-left">
+        <img class="footer-logo" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/logo-white.svg">
+      </div>
+      <div class="col-md-2">
+        <p class="footer-title">Sitemap</p>
+        <ul class="footer-links">
+          <li><a href="">Why Keptn?</a></li>
+          <li><a href="">Docs</a></li>
+          <li><a href="">Tutorials</a></li>
+          <li><a href="">Integration</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <p class="footer-title">Resources</p>
+        <ul class="footer-links">
+          <li><a href="">Docs</a></li>
+          <li><a href="">Tutorials</a></li>
+          <li><a href="">Github</a></li>
+          <li><a href="">Releases</a></li>
+          <li><a href="">Issues</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <p class="footer-title">Community</p>
+        <div class="footer-icons">
+          <a class="footer-icon-link">
+            <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-slack.svg">
+          </a>
+          <a class="footer-icon-link">
+            <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-twitter.svg">
+          </a>
+          <a class="footer-icon-link">
+            <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-mail.svg">
+          </a>
+          <a class="footer-icon-link">
+            <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-github.svg">
+          </a>
+          <a class="footer-icon-link">
+            <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-youtube.svg">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <p class="footer-text">Initially created by Dynatrace</p>
+      </div>
+    </div>
   </div>
 </div>
