Add colors for keptn-home.
KEPTN-9719

--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -21,6 +21,28 @@ $primary: #006BB8;
 $primary-opacity: rgba(#006BB8, 0.05);
 $secondary: #002C66;
 
+// Keptn-Home
+$primary-home-900: #006bb8ff;
+$primary-home-700: #006bb880;
+$primary-home-500: #006bb84d;
+$primary-home-100: #006bb80d;
+$secondary-home-900: #14ba5aff;
+$secondary-home-700: #14ba5a80;
+$secondary-home-500: #14ba5a4d;
+$secondary-home-100: #14ba5a1A;
+$dark-blue-home-900: #002c66ff;
+$dark-blue-home-700: #002c6680;
+$dark-blue-home-500: #002c664d;
+$dark-blue-home-100: #002c660d;
+$greyscale-home-900: #222222ff;
+$greyscale-home-800: #222222CC;
+$greyscale-home-700: #22222280;
+$greyscale-home-500: #2222224d;
+$greyscale-home-300: #22222233;
+$greyscale-home-200: #2222221a;
+$greyscale-home-100: #2222220d;
+
+
 // Links
 $link-color: $primary;
 $link-decoration: none;
